src/test/compile-fail/class-implements-int.rs
class cat : int { //! ERROR can only implement interface types
  let meows: uint;
  new(in_x : uint) { self.meows = in_x; }
}

fn main() {
  let nyan = cat(0u);
}